<resources>
    <string name="app_name">DHVSU Deals</string>
    <string name="log_in">Log-In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_to_log_in">Click Here to Log-In</string>
    <string name="NotRegistered">Not Registered? Click Here.</string>
    <string name="Fname">Full Name</string>
    <string name="SignUp">Sign-Up\n</string>
    <string name="MemAUTH">Member Authentication\n</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="money">Money</string>
    <string name="full_name">Full Name</string>
    <string name="member_id">Member ID</string>
    <string name="title_BalLoan">Outstanding Balance:</string>
    <string name="tittle_BalSavings">Savings:</string>
    <string name="Date_Recieved">Date and Time Recieved</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btnback">Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log-Out</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="up_signature">Upload Signature</string>
    <string name="comaker_name">Co-maker\'s Name</string>
    <string name="contact_no">Contact No: \t</string>
    <string name="address">Address: \t</string>
</resources>