<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".CreateFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/create"
        android:textSize="30sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/money" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/create"
        android:layout_margin="5dp" />


</LinearLayout>