<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dcreditsign1"
    tools:context=".RegisterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <ProgressBar
            android:id="@+id/resetProgBar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

    </com.google.android.material.textfield.TextInputLayout>



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnResetPassword"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@android:drawable/ic_menu_rotate"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/reset_password"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="@color/my_custom_color"/>

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@android:drawable/ic_menu_revert"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/btnback"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="@color/my_custom_color"/>


    <TextView
        android:id="@+id/LogInNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/Creamy_Brown"
        android:textSize="20sp" />

</LinearLayout>