<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".LogInActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dcredit_08_2"
        android:gravity="center" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:textColorHighlight="#106232"
            android:textColorLink="#106232" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHighlight="#106232"
            android:textColorLink="#0106232F" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="@color/my_custom_color" />

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FEFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FEFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="15sp" />


</LinearLayout>